--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -3,7 +3,7 @@
 <div class="row">
     <div class="row navbar text-center d-flex justify-content-between">
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover" href="#" aria-haspopup="true" aria-expanded="false">
             Shop All <i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu">
@@ -14,7 +14,7 @@
             </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover gold" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover gold" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Electric<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu">
@@ -24,7 +24,7 @@
           </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover"  href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Acoustic<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu">
@@ -34,7 +34,7 @@
             </ul>
         </div>
         <div class="dropdown show col gold">
-            <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="text-reset text-decoration-none cursor-hover"  href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Bass<i class="fa-solid fa-chevron-down fa-fw"></i>
             </a>
             <ul class="dropdown-menu">
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="dropdown show col gold text-nowrap">
-          <a class="text-reset text-decoration-none cursor-hover" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="text-reset text-decoration-none cursor-hover"  href="#"data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Accessories<i class="fa-solid fa-chevron-down fa-fw"></i>
           </a>
           <ul class="dropdown-menu">
