feat:  pep8 complete, readme update

--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -4,7 +4,7 @@
         <div class="input-group">
             <div class="input-group-prepend">
                 <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}" aria-label="Decrease quantity">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
@@ -16,7 +16,7 @@
                 id="id_qty_{{ item.item_id }}">
             <div class="input-group-append">
                 <button class="increment-qty btn btn-sm btn-black rounded-0"
-                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}" aria-label="Increase quantity">
                     <span>
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
@@ -25,5 +25,5 @@
         </div>
     </div>
 </form>
-<a class="update-link text-info"><small>Update</small></a>
-<a class="remove-item text-danger float-right" id="remove_{{ item.item_id}}"><small>Remove</small></a>
+<a class="update-link text-info" aria-label="Update quantity for {{ item.name }}"><small>Update</small></a>
+<a class="remove-item text-danger float-right" id="remove_{{ item.item_id}}" aria-label="Remove {{ item.name }} from cart"><small>Remove</small></a>
