--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -88,10 +88,10 @@
   </div>
   <div class="row text-center mt-4 justify-content-center">
       <div class="col-md-5 mb-3 mb-md-0 px-3">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection1.webp" class="img-fluid collection" alt="">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection1.webp" class="img-fluid collection" alt="gibson collection">
       </div>
       <div class="col-md-5 px-3">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection2.webp" class="img-fluid collection" alt="">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/collection2.webp" class="img-fluid collection" alt="fender collection">
       </div>
   </div>
   <div class="row text-center">
@@ -104,22 +104,22 @@
   <div class="row text-center mt-4 justify-content-center">
       <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta1.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta1.webp" class="img-fluid square-img" alt="instagram profile 1">
         </a>
       </div>
       <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta2.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta2.webp" class="img-fluid square-img" alt="instagram profile 2">
         </a>
       </div>
       <div class="col-6 col-md-3 mb-3 mb-md-0 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta3.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta3.webp" class="img-fluid square-img" alt="instagram profile 3">
         </a>
       </div>
       <div class="col-6 col-md-3 px-3">
         <a href="https://www.instagram.com" target="_blank">
-          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta4.webp" class="img-fluid square-img" alt="instagram profile">
+          <img src="https://string-theory.s3.eu-north-1.amazonaws.com/media/insta4.webp" class="img-fluid square-img" alt="instagram profile 4">
         </a>
       </div>
   </div>
